--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div id="game-container">
-    <h1>Missouri Permit Prep: Heads Up!</h1>
+    <h1>Missouri Permit Prep</h1>
     <div id="score-round"></div>
     <div id="question-section" class="hidden">
       <div id="question-text"></div>
